--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "start": "NODE_ENV=development node index.js",
     "start:staging": "NODE_ENV=staging node index.js",
     "start:production": "NODE_ENV=production node index",
-    "test": "mocha"
+    "test": "mocha",
+    "test-travis": "istanbul cover -x '**_test.js' -x '**/test.js' ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec"
   },
   "dependencies": {
     "async": "^2.0.0-rc.6",
@@ -56,6 +57,8 @@
     "lodash": "^4.13.1"
   },
   "devDependencies": {
+    "codecov.io": "^0.1.6",
+    "istanbul": "^0.4.4",
     "mocha": "^2.5.3",
     "should": "^10.0.0",
     "supertest": "^1.2.0"
