Updated travis and test configs

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,7 @@ addons:
     - gcc-4.8
     - g++-4.8
 env: CXX="g++-4.8" CC="gcc-4.8"
-script: npm run-script test-travis
-after_success: cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js && rm -rf ./coverage
+script:
+  - npm run-script test-travis
+after_success:
+  - cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js && rm -rf ./coverage
