--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "async": "^2.0.0-rc.6",
+    "backoff": "^2.5.0",
     "body-parser": "^1.15.2",
     "bunyan": "^1.8.1",
     "bunyan-dynamo": "0.0.5",
