--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
 dependencies:
   override:
     - docker info
-    - docker build --rm=false -t smartdevicelink/shaid-maids:$CIRCLE_SHA1 .
+    - docker build --rm=false -t smartdevicelink/shaid-maids:$CIRCLE_SHA1 -t smartdevicelink/shaid-maids:$CIRCLE_BRANCH .
     
 test:
   override:
@@ -17,3 +17,8 @@ deployment:
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push smartdevicelink/shaid-maids
+    branch: develop
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker push smartdevicelink/shaid-maids
+
