--- a/circle.yml
+++ b/circle.yml
@@ -18,3 +18,8 @@ deployment:
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push smartdevicelink/shaid-maids
+      - git config --global user.email "$GIT_EMAIL"
+      - git config --global user.name "$GIT_NAME"
+      - curl -O https://raw.githubusercontent.com/livio/scripts/master/docker/compose-update.sh
+      - chmod +x compose-update.sh
+      - ./compose-update.sh $CIRCLE_TAG smartdevicelink sdl_shaid smartdevicelink/shaid-maids docker-compose.yml "Bumped shaid-maids version $CIRCLE_TAG"
