--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "seneca": "3.2.2"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "codecov.io": "0.1.6",
     "istanbul": "0.4.5",
     "mocha": "3.1.2",
