--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ dependencies:
 test:
   override:
     - docker run -d --name maids smartdevicelink/shaid-maids:$CIRCLE_TAG
-    - sudo lxc-attach -n "$(docker inspect --format "{{.Id}}" pylon)" -- bash -c "cd /usr/src/app/ && npm test"
+    - sudo lxc-attach -n "$(docker inspect --format "{{.Id}}" maids)" -- bash -c "cd /usr/src/app/ && npm test"
 
 deployment:
   hub:
