--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ dependencies:
     
 test:
   override:
-    - docker run -d --name maids smartdevicelink/shaid-maids:$CIRCLE_TAG
+    - docker run -d --name maids -e "NODE_ENV=test-circleci" smartdevicelink/shaid-maids:$CIRCLE_TAG
     - sudo lxc-attach -n "$(docker inspect --format "{{.Id}}" maids)" -- bash -c "cd /usr/src/app/ && npm test"
 
 deployment:
