--- a/circle.yml
+++ b/circle.yml
@@ -9,8 +9,8 @@ dependencies:
     
 test:
   override:
-    - docker run -d --name maids -e "NODE_ENV=test-circleci" smartdevicelink/shaid-maids:$CIRCLE_TAG
-    - sudo lxc-attach -n "$(docker inspect --format "{{.Id}}" maids)" -- bash -c "cd /usr/src/app/ && DB_PASSWORD=$CASSANDRA_DB_PASSWORD NODE_ENV=test-circleci mocha"
+    - sudo chmod +x ./scripts/docker-run-tests.sh
+    - ./scripts/docker-run-tests.sh
 
 deployment:
   hub:
