--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "start": "NODE_ENV=development node index.js",
     "start:staging": "NODE_ENV=staging node index.js",
     "start:production": "NODE_ENV=production node index",
-    "test": "NODE_ENV=test mocha",
+    "test": "mocha",
     "test-circleci": "NODE_ENV=test-circleci mocha",
     "test-travis": "NODE_ENV=test-travis istanbul cover -x '**_test.js' -x '**/test.js' ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec"
   },
