Fixing npm tests in docker container and env variables

--- a/circle.yml
+++ b/circle.yml
@@ -9,8 +9,8 @@ dependencies:
     
 test:
   override:
-    - sudo chmod +x ./scripts/docker-run-tests.sh
-    - ./scripts/docker-run-tests.sh
+    - docker run -d --name maids -e "DB_PASSWORD=$CASSANDRA_DB_PASSWORD" smartdevicelink/shaid-maids:$CIRCLE_TAG
+    - sudo lxc-attach -n "$(docker inspect --format "{{.Id}}" maids)" -- bash -c "cd /usr/src/app/ && npm run-script test-circleci"
 
 deployment:
   hub:
