--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   maids:
     image: shaid-maids:latest
     depends_on:
-      - db 
+      - db
     links:
       - db
     entrypoint: scripts/wait-for-it.sh db:9160 -- node index.js
@@ -12,8 +12,8 @@ services:
     expose:
       - "3000"
   db:
-    image: abh1nav/cassandra:latest
-    expose: 
+    image: cassandra:3.9
+    expose:
       - "9042"
     volumes:
       - /var/lib/cassandra
